# test-mono-repo

./: .gitlab-ci.yml  README.md  buildspec.yml
api/: Dockerfile  README.md  buildspec.yml  pyproject.toml  requirements.txt
api/app/: main.py
web/: .env  buildspec.yml  package-lock.json
web/src/: App.js
